Feat: Update schedule

--- a/papers/templates/page.html
+++ b/papers/templates/page.html
@@ -34,7 +34,7 @@
                 <li>一人の著者に複数の所属がある場合は等分。</li>
                 <li>論文データは<a href="https://murawaki.org/misc/japan-nlp-{{ year }}.html">村脇先生のブログ</a>に機械的に従います。</li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
-                <li>毎週月曜日朝６時に自動更新されます。</li>
+                <li>毎週月曜日朝８時に自動更新。</li>
             </ul>
         </div>
 
