Feat: Add 2016 and 2017

--- a/papers/templates/page.html
+++ b/papers/templates/page.html
@@ -24,7 +24,8 @@
 
         <div>
             <p>日本の組織を所属とする者が、{{ year }}年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
-                    href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>)。対象は
+                    href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <p>方針：</p>
@@ -34,7 +35,7 @@
                 <li>一人の著者に複数の所属がある場合は等分。</li>
                 <li>論文データは<a href="https://murawaki.org/misc/japan-nlp-{{ year }}.html">村脇先生のブログ</a>に機械的に従います。</li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
-                <li>毎週月曜日朝８時に自動更新。</li>
+                <li>毎週月曜日朝５時に自動更新。</li>
             </ul>
         </div>
 
